# stitcher-scout

./: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: configuration.md  getting-started.md  how-it-works.md  index.md  mcp-integration.md
src/stitcher/: __init__.py  agent.py  auth.py  brief.py  cache.py  cli.py  config.py  context.py  decomposer.py  deps.py  evaluator.py  github_client.py  llm.py  mcp_server.py  models.py  presenter.py  refiner.py  scoring.py  searcher.py
src/stitcher/prompts/: decompose.py  evaluate.py  refine.py
tests/: test_auth.py  test_config.py  test_integration.py  test_llm.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_scoring.py
